# Rusty-Portfolio

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: lib.rs  main.rs  tailwind.css
src/components/: mod.rs
src/lib/: component.rs  mod.rs
src/lib/component/: left_section.rs  mod.rs  profile.rs  repo.rs  right_section.rs  skill.rs
style/: tailwind.css
