[package]
name = "leptos-portfolio"
version = "0.1.0"
edition = "2021"

[lib]
name = "leptos_portfolio"
crate-type = ["cdylib"]
path = "src/lib/mod.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
thaw = "0.2"
lucide-leptos = "1.1.0"
web-sys = { version = "0.3", features = ["Window", "ScrollToOptions"] }
wasm-bindgen = "0.2"
uuid = { version = "1.16.0", features = ["v4", "js"] }
leptos-use = "0.15.7"
leptos_reactive = "0.6.15"
reactive_graph = "0.1.8"
leptos_animation = "0.5.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
output-name = "leptos-portfolio"
tailwind-input-file = "src/tailwind.css"
tailwind-config-file = "tailwind.config.js"
